--- a/index.html
+++ b/index.html
@@ -17,6 +17,29 @@
     </div>
 
     <div class="row">
+        <div class="col-md-12">
+            <div class="card mb-4">
+            <div class="card-header" style = "background: #4ed1cb">Train Schedule</div>
+            <div class="card-body">
+                <table class="table table-sm table-hover" id='employee-table'>
+                <thead>
+                    <tr>
+                    <th scope="col">Train Name</th>
+                    <th scope="col">Destination</th>
+                    <th scope="col">Frequency (min)</th>
+                    <th scope="col">Next Arrival</th>
+                    <th scope="col">Minutes Away</th>
+                    </tr>
+                </thead>
+                <tbody>
+                </tbody>
+                </table>
+            </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
         <div class="col-lg-12">
           <div class="card">
             <div class="card-header" style = "background: #4ed1cb">
