--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <title>Document</title>
+    <title>Train Time!</title>
 </head>
 <body>
 
 <div class="container">
 
-    <div class="jumbotron" style="background: lightblue">
-        <h1 class="text-center">IT'S CHOO CHOO TIME!</h1>
-        <h3 class="text-center">Find below when your train is scheduled, or schedule a train yourself.</h3>
+    <div class="jumbotron" style="background: rgb(25, 90, 90)">
+        <h1 class="text-center" style="color: white">IT'S CHOO CHOO TIME!</h1>
+        <h3 class="text-center" style="color: white">Find below when your train is scheduled, or schedule a train yourself.</h3>
     </div>
 
     <div class="row">
@@ -21,7 +21,7 @@
             <div class="card mb-4">
             <div class="card-header" style = "background: #4ed1cb">Train Schedule</div>
             <div class="card-body">
-                <table class="table table-sm table-hover" id='employee-table'>
+                <table class="table table-sm table-hover" id='train-table'>
                 <thead>
                     <tr>
                     <th scope="col">Train Name</th>
