--- a/index.html
+++ b/index.html
@@ -5,69 +5,83 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+     <!-- Firebase References -->
+    <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
+    <!-- Moment.js Reference -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
     <title>Train Time!</title>
 </head>
 <body>
 
-<div class="container">
-
+  <div class="container">
     <div class="jumbotron" style="background: rgb(25, 90, 90)">
         <h1 class="text-center" style="color: white">IT'S CHOO CHOO TIME!</h1>
         <h3 class="text-center" style="color: white">Find below when your train is scheduled, or schedule a train yourself.</h3>
     </div>
 
     <div class="row">
-        <div class="col-md-12">
-            <div class="card mb-4">
-            <div class="card-header" style = "background: #4ed1cb">Train Schedule</div>
-            <div class="card-body">
-                <table class="table table-sm table-hover" id='train-table'>
-                <thead>
-                    <tr>
-                    <th scope="col">Train Name</th>
-                    <th scope="col">Destination</th>
-                    <th scope="col">Frequency (min)</th>
-                    <th scope="col">Next Arrival</th>
-                    <th scope="col">Minutes Away</th>
-                    </tr>
-                </thead>
-                <tbody>
-                </tbody>
-                </table>
-            </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-lg-12">
-          <div class="card">
-            <div class="card-header" style = "background: #4ed1cb">
-              Add Train
-            </div>
-            <div class="card-body">
-              <form>
-                <div class="form-group">
-                  <label for="train-name">Train Name</label>
-                  <input class="form-control" id="train-name" type="text">
-                </div>
-                <div class="form-group">
-                  <label for="destination">Destination</label>
-                  <input class="form-control" id="destination" type="number">
-                </div>
-                <div class="form-group">
-                  <label for="first-train">First Train Time (HH:mm - military time)</label>
-                  <input class="form-control" id="first-train" type="number">
-                </div>
-                <div class="form-group">
-                  <label for="freq">Frequency (min)</label>
-                  <input class="form-control" id="freq" type="number">
-                </div>
-                <button class="btn btn-primary" id="submit-bid" type="submit">Submit</button>
-              </form>
-            </div>
+      <div class="col-md-12">
+        <div class="card mb-4">
+          <div class="card-header" style = "background: #4ed1cb">Train Schedule</div>
+          <div class="card-body">
+            <table class="table table-sm table-hover" id='train-table'>
+              <thead>
+                <tr>
+                  <th scope="col">Train Name</th>
+                  <th scope="col">Destination</th>
+                  <th scope="col">Frequency (min)</th>
+                  <th scope="col">Next Arrival</th>
+                  <th scope="col">Minutes Away</th>
+                </tr>
+              </thead>
+              <tbody>
+                <!-- <tr>
+                  <td class="name-display"></td>
+                  <td class="destination-display"></td>
+                  <td class="freq-display"></td>
+                  <td class="next-display"></td>
+                  <td class="minutes-display"></td>
+                </tr> -->
+              </tbody>
+            </table>
           </div>
         </div>
       </div>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="card">
+          <div class="card-header" style = "background: #4ed1cb">
+            Add Train
+          </div>
+          <div class="card-body">
+            <form>
+              <div class="form-group">
+                <label for="train-name">Train Name</label>
+                <input class="form-control" id="train-name" type="text">
+              </div>
+              <div class="form-group">
+                <label for="destination">Destination</label>
+                <input class="form-control" id="destination" type="text">
+              </div>
+              <div class="form-group">
+                <label for="first-train">First Train Time (HH:mm - military time)</label>
+                <input class="form-control" id="first-train" type="text">
+              </div>
+              <div class="form-group">
+                <label for="freq">Frequency (min)</label>
+                <input class="form-control" id="freq" type="number">
+              </div>
+              <button class="btn btn-primary" id="submit-bid" type="submit">Submit</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <script src="app.js"></script>
 </body>
 </html>
